--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+    <h1>This is my first website.</h1>
+    <h3>This is h3</h3>
 </body>
 </html>
