--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>This is my first website.</h1>
-    <h3>This is h3</h3>
-    <h3>This h3 hahahahahahahahahahahahaha.</h3>
+    <p>Feeling happy now</p>
 </body>
 </html>
